[package]
name = "pixwrapper"
version = "0.1.2"
authors = ["Andrey Pushkar <mail@apushkar.me>"]
edition = "2018"
description = "A tiny library that exposes bindings to PIX on Windows graphics debugger/profiler client API"
license = "GPL-3.0"
keywords = ["pix", "winpix", "d3d", "d3d12", "directx12"]

[build-dependencies]
bindgen = "0.57"
cc = "1.0.54"

[dependencies]
